@@ -45,17 +45,13 @@ void MySaxParser::on_end_document()
 void MySaxParser::on_start_element(const Glib::ustring& name,
                                    const AttributeList& attributes)
 {
-  /*
   std::cout << "node name=" << name << std::endl;
 
   // Print attributes:
-  for(AttributeMap::const_iterator iter = attributes.begin();
-      iter != attributes.end();
-      ++iter)
+  for(xmlpp::SaxParser::AttributeList::const_iterator iter = attributes.begin(); iter != attributes.end(); ++iter)
   {
-    std::cout << "  Attribute " << iter->first << " = " << iter->second << std::endl;
+    std::cout << "  Attribute " << iter->name << " = " << iter->value << std::endl;
   }
-  */
 }
 
 void MySaxParser::on_end_element(const Glib::ustring& name)
